--- a/app/views/addingvalue/current/views/layouts/_BASEFULL-AV.html
+++ b/app/views/addingvalue/current/views/layouts/_BASEFULL-AV.html
@@ -1,4 +1,4 @@
-{% set serviceName = "Check if you can apply for a Farming Transformation Fund productivity grant" %}
+{% set serviceName = "Check if you can apply for a Farming Transformation Fund Adding Value grant" %}
 
 {% extends "layout.html" %}
 
