--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,7 +9,7 @@
 -->
 
 <h1 class="govuk-heading-l">
-  Tactical grant prototypes
+  Tactical grants - prototypes v1 to Private beta
 </h1>
 <p>
   The following were built using GOV.UK Prototype Kit v9.15.0.
