--- a/app/views/addingvalue/index.html
+++ b/app/views/addingvalue/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% extends "slurry/current/views/layouts/_BASEFULL.html" %}
+{% extends "addingvalue/current/views/layouts/_BASEFULL-AV.html" %}
 
 {% block service %}
 
@@ -20,7 +20,7 @@
         <h2 class="govuk-heading-l">User research</h2>
 
         <p class='govuk-list app-list--definition'>
-        <a href='addingvalue/current/guidance' class="govuk-link--no-visited-state">Guidance: Adding value grant</a></p>
+        <a href='addingvalue/current/guidance' class="govuk-link--no-visited-state">Guidance: Farming Transformation Fund Adding Value grant</a></p>
           <p class='govuk-list app-list--definition'>
             <a href='addingvalue/current/start' class="govuk-link--no-visited-state">Start page</a><br>
             Specialist start page, hosted on GOV.UK</p>
