--- a/app/views/addingvalue/current/products-processed.html
+++ b/app/views/addingvalue/current/products-processed.html
@@ -35,7 +35,7 @@ What type of products are being processed?
 
 
                   hint: {
-                    html: 'Products must be sold at a higher price than the original item (primary product)<br><br>Select one option'
+                    text: 'Select one option'
                   },
 
 
