--- a/app/views/addingvalue/index.html
+++ b/app/views/addingvalue/index.html
@@ -35,7 +35,7 @@
                             <p class='govuk-list app-list--definition'>
                               <a href='addingvalue/current/guidance' class="govuk-link--no-visited-state">Version 1 (current)</a><br>
                               <p class='govuk-list app-list--definition'>The version shown in this prototype is currently in testing for the first round of UR between 18 and 29 October 2021.<br>
-                                <span class="govuk-body govuk-!-font-size-14"># Last updated on 26 October 2021<br/>
+                                <span class="govuk-body govuk-!-font-size-14"># Last updated on 1 November 2021<br/>
                                 </span></p>
       </div>
       <div class="proto-admin">
@@ -48,6 +48,6 @@
             <p class='govuk-heading-m'>Wireframes</p>
               <p class='govuk-list app-list--definition'>
                 <a href='https://www.sketch.com/s/0a6bfc13-ff58-4bf9-8485-2ae85ad93edd' class="govuk-link--no-visited-state" target="new" >Sketch wireframes (opens in new tab)</a><br>
-                  <img src="/public/images/sketch-icon.png" alt="Sketch icon" width="17" height="17">Sketch (TBC).</p>
+                  <img src="/public/images/sketch-icon.png" alt="Sketch icon" width="17" height="17">Sketch (up-to date).</p>
       </div>
 {% endblock %}
