--- a/app/views/addingvalue/current/adding-value.html
+++ b/app/views/addingvalue/current/adding-value.html
@@ -30,7 +30,7 @@ How will you add value to the products?
                   name: 'adding-value',
                   fieldset: {
                       legend: {
-                          text: 'How will you add value to the products?',
+                          text: 'How will your project add value to the products?',
                           isPageHeading: true,
                           classes: 'govuk-fieldset__legend--l'
                       }
@@ -42,7 +42,7 @@ How will you add value to the products?
                   items: [
                 {
                   value: "Processing or preparing primary product",
-                  text: "Processing or preparing primary product",
+                  text: "Slaughtering, processing or preparing primary product",
                   hint: {
                   text: "For example, cut and packed meat, yogurt to cheese, brewing or distilling"
                   },
@@ -67,13 +67,13 @@ How will you add value to the products?
                 },
                 {
                   value: "Dynamic controlled-atmosphere storage",
-                  text: "Dynamic controlled-atmosphere storage",
+                  text: "Controlled atmosphere or dynamic controlled atmosphere storage",
                   checked: checked("adding-value", "Dynamic controlled-atmosphere storage")
                 },
                 {
-                  value: "Controlled-atmosphere storage",
-                  text: "Controlled-atmosphere storage",
-                  checked: checked("adding-value", "Controlled-atmosphere storage")
+                  value: "New retail facility to sell direct to consumers",
+                  text: "New retail facility to sell direct to consumers",
+                  checked: checked("adding-value", "New retail facility to sell direct to consumers")
                 }
                 ]
               }) }}
