--- a/app/views/addingvalue/current/business-type.html
+++ b/app/views/addingvalue/current/business-type.html
@@ -37,7 +37,7 @@ What is your business?
                   items: [
                 {
                   value: "Agricultural)",
-                  text: "An agricultural, horticultural or forestry business (a primary producer)",
+                  text: "A grower or producer of agricultural, horticultural or forestry agri-products (a primary producer)",
                   hint: {
                   text: "For example, arable or livestock farmer, growing trees, fruit producer, salad grower"
                   },
@@ -54,7 +54,7 @@ What is your business?
                 },
                 {
                   value: "100% business owned",
-                  text: "A separate processing business 100% owned by a primary producer",
+                  text: "A processing business owned by a primary producer",
                   hint: {
                   text: "For example, cheese processing business owned by a dairy farmer"
                   },
@@ -86,7 +86,7 @@ What is your business?
           <ul class="govuk-list govuk-list--bullet">
           <li>are agricultural, horticultural or forestry producers (primary producers)</li>
           <li>provide processing services to a primary producer</li>
-          <li>is a separate processing business 100% owned by a primary producer</li>
+          <li>are a separate processing business owned by a primary producer</li>
           </ul>
 
 
