--- a/app/views/addingvalue/current/environmental-impact.html
+++ b/app/views/addingvalue/current/environmental-impact.html
@@ -33,15 +33,15 @@ How will the project improve the environment?
                       }
                   },
                   hint: {
-                  text: "Select all that apply"
+                  text: "Select up to 2 options"
                   },
 
                   items: [
                 {
                   value: "Energy efficiency",
-                  text: "Energy efficiency",
+                  text: "Renewable energy",
                   hint:{
-                    text:'For example, using variable speed motors or heat exchangers '
+                    text:'For example, majority of energy for the project is generated on site'
                   },
                   checked: checked("environmental-impact", "Energy efficiency")
                 },
@@ -49,7 +49,7 @@ How will the project improve the environment?
                   value: "Water efficiency",
                   text: "Water efficiency",
                   hint:{
-                    text: 'For example, recycling waste water, rainwater harvesting'
+                    text: 'For example, majority of water for the project is harvested or recycled on site'
                   },
                   checked: checked("environmental-impact", "Water efficiency")
                 },
@@ -57,13 +57,13 @@ How will the project improve the environment?
                   value: "Waste efficiency",
                   text: "Waste efficiency",
                   hint: {
-                    text: 'For example, separating waste, maximising waste recycling'
+                    text: 'For example, majority of project waste is recycled or reused instead of going to landfill'
                   },
                   checked: checked("environmental-impact", "Waste efficiency")
                 },
                 {
                   value: "Reduce single-use plastics",
-                  text: "Reduce single-use plastics",
+                  text: "Remove single-use plastics",
                   hint :{
                     text: 'For example, removing unnecessary packaging, replacing plastic packaging'
                   },
@@ -73,7 +73,7 @@ How will the project improve the environment?
                   value: "Reduce harmful emissions or pollutants",
                   text: "Reduce harmful emissions or pollutants",
                   hint :{
-                    text: 'For example, reducing emission from waste water, using dynamic controlled-atmosphere storage to reduce emissions'
+                    text: 'For example, reducing pollutants in waste water'
                   },
                   checked: checked("environmental-impact", "Reduce harmful emissions or pollutants")
                 },
