--- a/app/views/addingvalue/current/products-coming-from.html
+++ b/app/views/addingvalue/current/products-coming-from.html
@@ -33,13 +33,13 @@ Where are the primary products coming from?
                       }
                   },
                   hint: {
-                  text: "Select one option"
+                  html: "How far the majority of the raw materials will travel to get to your <br>project site <br><br>Select one option"
                   },
 
                   items: [
                 {
                   value: "Processing point",
-                  text: "Processing point",
+                  text: "Within 1 mile",
                   checked: checked("products-coming-from", "Processing point")
                 },
                 {
@@ -58,9 +58,9 @@ Where are the primary products coming from?
                   checked: checked("products-coming-from", "More than 50 miles")
                 },
                 {
-                  value: "Outside the UK ",
-                  text: "Outside the UK ",
-                  checked: checked("products-coming-from", "Outside the UK ")
+                  value: "Outside the UK",
+                  text: "From outside the UK",
+                  checked: checked("products-coming-from", "Outside the UK")
                 }
                 ]
               }) }}
