--- a/app/views/addingvalue/current/products-processed.html
+++ b/app/views/addingvalue/current/products-processed.html
@@ -42,26 +42,26 @@ What type of products are being processed?
                   items: [
                 {
                   value: "Arable crops",
-                  text: "Arable crops",
+                  text: "Arable products",
                   hint: {
-                  text: "For example, cereals, legumes, oilseeds"
+                  text: "For example, crushing of oilseeds, rolling or flaking of grains as food ingredients"
                   },
                   checked: checked("products-processed", "Arable crops")
                 },
 
                 {
                   value: "Horticultural crops",
-                  text: "Horticultural crops",
+                  text: "Horticultural products",
                   hint: {
-                  text: "For example, vegetables, fruits, nuts, edible flowers"
+                  text: "For example, grading and packing of soft fruit, washing and packing vegetables, packing salad crops"
                   },
                   checked: checked("products-processed", "Horticultural crops")
                 },
                 {
                   value: "Dairy or meat produce",
-                  text: "Dairy or meat produce",
+                  text: "Dairy or meat products",
                   hint: {
-                  text: "For example, processing and bottling milk, cutting, processing and packing meat"
+                  text: "For example, processing and bottling milk or slaughtering, cutting, processing and packing meat"
                   },
                   checked: checked("products-processed", "Dairy or meat produce")
                 },
@@ -75,7 +75,7 @@ What type of products are being processed?
                 },
                 {
                   value: "Fodder crops",
-                  text: "Fodder crops",
+                  text: "Fodder products",
                   hint: {
                   text: "For example, processing and repacking hay and straw for specialist markets or retail sale"
                   },
@@ -83,9 +83,9 @@ What type of products are being processed?
                 },
                 {
                   value: "Non-edible crops",
-                  text: "Non-edible crops",
+                  text: "Non-edible products",
                   hint: {
-                  text: "For example, processing and packing ornamental flowers and bulbs after harvesting "
+                  text: "For example, processing and packing ornamental flowers and bulbs after harvesting"
                   },
                   checked: checked("products-processed", "Non-edible crops")
                 },
