--- a/app/views/addingvalue/current/where-products-sold.html
+++ b/app/views/addingvalue/current/where-products-sold.html
@@ -27,7 +27,7 @@ Where are the processed products being sold?
                   name: 'where-products-sold',
                   fieldset: {
                       legend: {
-                          text: 'Where are the processed products being sold?',
+                          text: 'Where will the processed products be sold?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
@@ -39,7 +39,7 @@ Where are the processed products being sold?
                   items: [
                 {
                   value: "Processing point",
-                  text: "Processing point",
+                  text: "Within 1 mile",
                   checked: checked("where-products-sold", "Processing point")
                 },
                 {
