--- a/app/views/addingvalue/current/project-items.html
+++ b/app/views/addingvalue/current/project-items.html
@@ -24,8 +24,7 @@
 
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
-        <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset" aria-describedby="project-items-hint">
+
 
 
 
@@ -41,42 +40,6 @@
 
 <p class="govuk-hint">Select all the items your project needs</p>
 
-
-  <div class="govuk-checkboxes">
-    <div class="govuk-checkboxes__item">
-      <input class="govuk-checkboxes__input" id="robotic-equipment-2" name="robotic-equipment" type="checkbox" value="Processing equipment or machinery" {{ checked("robotic-equipment", "Processing equipment or machinery") }}>
-      <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-2">
-        Processing equipment or machinery
-      </label>
-      <div id="Processing-equipment-or-machinery-hint" class="govuk-hint govuk-radios__hint">
-          For example, equipment for milk pasteurising or vegetable washing, packing machinery
-        </div>
-    </div>
-    <div class="govuk-checkboxes">
-      <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="robotic-equipment-8" name="robotic-equipment" type="checkbox" value="Controlled-atmosphere storage " {{ checked("robotic-equipment", "Controlled-atmosphere storage ") }}>
-        <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-8">
-          Controlled-atmosphere storage
-        </label>
-        <div id="Controlled-atmosphere-storage-hint" class="govuk-hint govuk-radios__hint">
-              Monitoring and controlling the temperature and humidity of products
-            </div>
-      </div>
-    </div>
-
-
-<div class="govuk-checkboxes">
-  <div class="govuk-checkboxes__item">
-    <input class="govuk-checkboxes__input" id="robotic-equipment-1" name="robotic-equipment" type="checkbox" value="Dynamic controlled-atmosphere storage" {{ checked("robotic-equipment", "Dynamic controlled-atmosphere storage") }}>
-    <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-1">
-Dynamic controlled-atmosphere storage
-    </label>
-    <div id="Dynamic-controlled-atmosphere-storage-hint" class="govuk-hint govuk-radios__hint">
-          Monitoring and controlling gases produced by or changes in the products, as well as temperature and humidity
-        </div>
-
-  </div>
-
     <div class="govuk-checkboxes">
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="robotic-equipment-3" name="robotic-equipment" type="checkbox" value="Constructing or improving buildings" {{ checked("robotic-equipment", "Constructing or improving buildings") }}>
@@ -86,9 +49,29 @@ Dynamic controlled-atmosphere storage
         <div id="Constructing-or-improving-buildings-hint" class="govuk-hint govuk-radios__hint">
               For example, a new building for cheese making, extending an existing building to install a new meat-cutting and packing line
             </div>
-
       </div>
-      <div class="govuk-checkboxes">
+      
+        <div class="govuk-checkboxes__item">
+          <input class="govuk-checkboxes__input" id="robotic-equipment-2" name="robotic-equipment" type="checkbox" value="Processing equipment or machinery" {{ checked("robotic-equipment", "Processing equipment or machinery") }}>
+          <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-2">
+            Processing equipment or machinery
+          </label>
+          <div id="Processing-equipment-or-machinery-hint" class="govuk-hint govuk-radios__hint">
+              For example, equipment and machinery for pasteurising and bottling milk, a meat cutting and packing line or vegetable washing and packing
+            </div>
+        </div>
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="robotic-equipment-8" name="robotic-equipment" type="checkbox" value="Controlled atmosphere (CA) and dynamic controlled atmosphere" {{ checked("robotic-equipment", "Controlled atmosphere (CA) and dynamic controlled atmosphere") }}>
+        <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-8">
+          Controlled atmosphere (CA) and dynamic controlled atmosphere
+        </label>
+        <div id="Controlled-atmosphere-storage-hint" class="govuk-hint govuk-radios__hint">
+              For example, CA storage of apples or DCA storage for top fruit
+            </div>
+      </div>
+
+
+
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="robotic-equipment-5" name="robotic-equipment" type="checkbox" value="Specialist vehicles" {{ checked("robotic-equipment", "Specialist vehicles") }}>
           <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-5">
@@ -98,7 +81,7 @@ Dynamic controlled-atmosphere storage
                 For example, forklift trucks, refrigerated vans or lorries
               </div>
         </div>
-        <div class="govuk-checkboxes">
+
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" id="robotic-equipment-9" name="robotic-equipment" type="checkbox" value="Retail facilities " {{ checked("robotic-equipment", "Retail facilities ") }}>
             <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-9">
@@ -108,12 +91,12 @@ Dynamic controlled-atmosphere storage
                   For example, farm shops
                 </div>
           </div>
-
+</div>
 
         </fieldset>
         </div>
-    </fieldset>
-  </div>
+
+
 
 <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button>
 
