--- a/app/views/addingvalue/index.html
+++ b/app/views/addingvalue/index.html
@@ -33,10 +33,14 @@
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Design history</h2>
                             <p class='govuk-list app-list--definition'>
-                              <a href='addingvalue/current/guidance' class="govuk-link--no-visited-state">Version 1 (current)</a><br>
-                              <p class='govuk-list app-list--definition'>The version shown in this prototype is currently in testing for the first round of UR between 18 and 29 October 2021.<br>
-                                <span class="govuk-body govuk-!-font-size-14"># Last updated on 1 November 2021<br/>
+                              <a href='addingvalue/current/guidance' class="govuk-link--no-visited-state">Version 2 (current)</a><br>
+                              <p class='govuk-list app-list--definition'>This is the version after the first round of iterations, testing with users 4 and 15 November 2021.<br> Includes issues 1 to 16, from <a href='https://eaflood.atlassian.net/wiki/spaces/FG/pages/3630694446/Adding+Value+Design+Content+Changes+Actions' target="new" class="govuk-link--no-visited-state">Confluence</a>.<br>
+                                <span class="govuk-body govuk-!-font-size-14"># Last updated on 4 November 2021<br/>
                                 </span></p>
+                                <p class='govuk-heading-m'>Previous versions</p>
+                                <p class='govuk-list app-list--definition'>
+                                  <a href='/addingvalue/v1/guidance' class="govuk-link--no-visited-state">Version 1</a><br>
+                                    This is the baseline desing, which was tested with users between 18 October 2021 and 29 October 2021.</p>
       </div>
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Journeys and wireframes</h2>
@@ -48,6 +52,6 @@
             <p class='govuk-heading-m'>Wireframes</p>
               <p class='govuk-list app-list--definition'>
                 <a href='https://www.sketch.com/s/0a6bfc13-ff58-4bf9-8485-2ae85ad93edd' class="govuk-link--no-visited-state" target="new" >Sketch wireframes (opens in new tab)</a><br>
-                  <img src="/public/images/sketch-icon.png" alt="Sketch icon" width="17" height="17">Sketch (up-to date).</p>
+                  <img src="/public/images/sketch-icon.png" alt="Sketch icon" width="17" height="17">Sketch (Always up-to date).</p>
       </div>
 {% endblock %}
