--- a/app/views/addingvalue/current/guidance.html
+++ b/app/views/addingvalue/current/guidance.html
@@ -16,7 +16,7 @@
   <ul class="govuk-list govuk-list--bullet">
   <li>are an agricultural, horticultural or forestry producer (primary producers) </li>
   <li>provide processing services to a primary producer</li>
-  <li>are a separate processing business 100% owned by a primary producer</li>
+  <li>are a separate processing business owned by a primary producer</li>
   <li>will do the grant-funded work in England and your business is registered in England</li>
   <li>estimate the project costs are over £87,500</li>
 </ul>
