--- a/app/views/addingvalue/current/project-items.html
+++ b/app/views/addingvalue/current/project-items.html
@@ -50,7 +50,7 @@
               For example, a new building for cheese making, extending an existing building to install a new meat-cutting and packing line
             </div>
       </div>
-      
+
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="robotic-equipment-2" name="robotic-equipment" type="checkbox" value="Processing equipment or machinery" {{ checked("robotic-equipment", "Processing equipment or machinery") }}>
           <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-2">
@@ -63,7 +63,7 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="robotic-equipment-8" name="robotic-equipment" type="checkbox" value="Controlled atmosphere (CA) and dynamic controlled atmosphere" {{ checked("robotic-equipment", "Controlled atmosphere (CA) and dynamic controlled atmosphere") }}>
         <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-8">
-          Controlled atmosphere (CA) and dynamic controlled atmosphere
+          Controlled atmosphere (CA) and dynamic controlled atmosphere (DCA)
         </label>
         <div id="Controlled-atmosphere-storage-hint" class="govuk-hint govuk-radios__hint">
               For example, CA storage of apples or DCA storage for top fruit
