--- a/app/views/robotics/current/project-items.html
+++ b/app/views/robotics/current/project-items.html
@@ -33,18 +33,16 @@
     <fieldset class="govuk-fieldset" aria-describedby="associated-works-hint">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
         <h1 class="govuk-fieldset__heading">
-          What eligible items does your project need?
+          Which items does your project need?
         </h1>
       </legend>
       <div id="project-items-hint" class="govuk-hint">
     </div>
 
 <p class="govuk-hint">Select all the items your project needs</p>
-
-<h3 class="govuk-heading-s">Non-robotic equipment</h3>
   <div class="govuk-checkboxes">
     <div class="govuk-checkboxes__item">
-      <input class="govuk-checkboxes__input" id="robotic-equipment-2" name="robotic-equipment" type="checkbox" value="Advanced ventilation control units" {{ checked("robotic-equipment", "Advanced ventilation control units") }}>
+      <input class="govuk-checkboxes__input" id="robotic-equipment-2" name="robotic-equipment2" type="checkbox" value="Advanced ventilation control units" {{ checked("robotic-equipment2", "Advanced ventilation control units") }}>
       <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-2">
         Advanced ventilation control units
       </label>
@@ -52,85 +50,26 @@
           System to control and monitor ventilation of existing horticultural or livestock buildings to minimise heat loss and reduce greenhouse gas and particulate emissions
         </div>
     </div>
-    <div class="govuk-checkboxes">
+
       <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="robotic-equipment-8" name="robotic-equipment" type="checkbox" value="Wavelength-specific LED lighting" {{ checked("robotic-equipment", "Wavelength-specific LED lighting") }}>
-        <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-8">
+        <input class="govuk-checkboxes__input" id="robotic-equipment-3" name="robotic-equipment2" type="checkbox" value="Wavelength-specific LED lighting" {{ checked("robotic-equipment2", "Wavelength-specific LED lighting") }}>
+        <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-3">
           Wavelength-specific LED lighting for horticultural crops
         </label>
         <div id="wavelength-specific-LED-lighting-hint" class="govuk-hint govuk-radios__hint">
               Wavelength-specific LED lighting to aid plant growth
             </div>
-      </div>
+            </div>
+
+            <div class="govuk-checkboxes__item">
+              <input class="govuk-checkboxes__input" id="robotic-equipment-4" name="robotic-equipment2" type="checkbox" value="Robotic equipment item" {{ checked("robotic-equipment2", "Robotic equipment item") }}>
+              <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-4">
+                Robotic equipment item
+              </label>
+
     </div>
   </fieldset>
   </div>
-
-<h3 class="govuk-heading-s">Robotic equipment</h3>
-<div id="robotic-equipment-hint" class="govuk-hint">
-      Autonomous farming equipment capable of sensing its environment, making decisions and performing actions
-    </div>
-
-<div class="govuk-checkboxes">
-  <div class="govuk-checkboxes__item">
-    <input class="govuk-checkboxes__input" id="robotic-equipment-1" name="robotic-equipment" type="checkbox" value="Robotic or autonomous harvesting equipment" {{ checked("robotic-equipment", "Robotic or autonomous harvesting equipment") }}>
-    <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-1">
-      Robotic or autonomous harvesting equipment
-    </label>
-
-  </div>
-
-    <div class="govuk-checkboxes">
-      <div class="govuk-checkboxes__item">
-        <input class="govuk-checkboxes__input" id="robotic-equipment-3" name="robotic-equipment" type="checkbox" value="Robotic weeding equipment" {{ checked("robotic-equipment", "Robotic weeding equipment") }}>
-        <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-3">
-          Robotic weeding equipment
-        </label>
-      </div>
-      <div class="govuk-checkboxes">
-        <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="robotic-equipment-5" name="robotic-equipment" type="checkbox" value="Robotic spraying equipment" {{ checked("robotic-equipment", "Robotic spraying equipment") }}>
-          <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-5">
-            Robotic spraying equipment
-          </label>
-        </div>
-        <div class="govuk-checkboxes">
-          <div class="govuk-checkboxes__item">
-            <input class="govuk-checkboxes__input" id="robotic-equipment-9" name="robotic-equipment" type="checkbox" value="Robotic tractor" {{ checked("robotic-equipment", "Robotic tractor") }}>
-            <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-9">
-              Autonomous driverless tractor
-            </label>
-          </div>
-      <div class="govuk-checkboxes">
-        <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="robotic-equipment-4" name="robotic-equipment" type="checkbox" value="Voluntary robotic milking equipment" {{ checked("robotic-equipment", "Voluntary robotic milking equipment") }}>
-          <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-4">
-            Voluntary robotic milking system
-          </label>
-        </div>
-        <div class="govuk-checkboxes">
-          <div class="govuk-checkboxes__item">
-            <input class="govuk-checkboxes__input" id="robotic-equipment-7" name="robotic-equipment" type="checkbox" value="Robotic feeding systems" {{ checked("robotic-equipment", "Robotic feeding systems") }}>
-            <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-7">
-              Robotic feeding system
-            </label>
-          </div>
-          <div class="govuk-checkboxes">
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="robotic-equipment-6" name="robotic-equipment" type="checkbox" value="Robotic transplanting" {{ checked("robotic-equipment", "Robotic transplanting") }}>
-              <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-6">
-                Robotic transplanting
-              </label>
-            </div>
-            <div class="govuk-checkboxes">
-                    <div class="govuk-checkboxes__item">
-                      <input class="govuk-checkboxes__input" id="robotic-equipment-10" name="robotic-equipment" type="checkbox" value="Other robotic equipment" {{ checked("robotic-equipment", "Other robotic equipment") }}>
-                      <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-10">
-                        Other robotic equipment
-                      </label>
-                    </div>
-
-
 
     </fieldset>
   </div>
