--- a/app/views/addingvalue/current/current-customers.html
+++ b/app/views/addingvalue/current/current-customers.html
@@ -38,6 +38,11 @@ Who are your current customers?
 
                   items: [
                 {
+                  value: "Producers or growers",
+                  text: "Producers or growers",
+                  checked: checked("current-customers", "Producers or growers")
+                },
+                {
                   value: "Processors",
                   text: "Processors",
                   checked: checked("current-customers", "Processors")
