--- a/app/views/addingvalue/current/future-customers.html
+++ b/app/views/addingvalue/current/future-customers.html
@@ -38,6 +38,11 @@ Who will your customers be after the project?
 
                   items: [
                 {
+                  value: "Producers or growers2",
+                  text: "Producers or growers",
+                  checked: checked("current-customers", "Producers or growers2")
+                },
+                {
                   value: "Processors",
                   text: "Processors",
                   checked: checked("future-customers", "Processors")
