--- a/app/views/addingvalue/current/guidance.html
+++ b/app/views/addingvalue/current/guidance.html
@@ -14,7 +14,7 @@
 
 <p>You can apply if you:</p>
   <ul class="govuk-list govuk-list--bullet">
-  <li>are an agricultural, horticultural or forestry producer (primary producers) </li>
+  <li>are a grower or producer of agricultural, horticultural or forestry agri-products (a primary producer)</li>
   <li>provide processing services to a primary producer</li>
   <li>are a separate processing business owned by a primary producer</li>
   <li>will do the grant-funded work in England and your business is registered in England</li>
