--- a/app/views/addingvalue/current/project-impact.html
+++ b/app/views/addingvalue/current/project-impact.html
@@ -34,7 +34,7 @@ What impact will the project have?
                       }
                   },
                   hint: {
-                  text: "Select up to 2 options"
+                  text: "Select all that apply"
                   },
 
                   items: [
