--- a/app/views/addingvalue/current/tenancy.html
+++ b/app/views/addingvalue/current/tenancy.html
@@ -54,7 +54,7 @@
                 },
                 {
                   value: "Contractor",
-                  text: "Not applicable - I'm a mobile contractor",
+                  text: "Not applicable – I'm a mobile contractor",
                   checked: checked("tenancy", "Contractor")
                 }
               ]
