2nd round of iterations - on AV

--- a/app/views/addingvalue/current/guidance.html
+++ b/app/views/addingvalue/current/guidance.html
@@ -26,13 +26,13 @@
 <h2 id="what-the-grant-is-for">What the grant is for</h2>
   <p>The grant can pay up to 40% of the costs for:</p>
     <ul>
-      <li>processing equipment or machinery</li>
-      <li>controlled-atmosphere or dynamic controlled-atmosphere storage</li>
+      <li>processing equipment, machinery and facilities (for example, equipment and machinery for bagging or bottling lines, meat cutting lines or vegetable washing and sorting, plus associated refrigeration, auto-packing or handling/palletising facilities)</li>
+      <li>controlled atmosphere or dynamic controlled atmosphere storage</li>
       <li>constructing or improving buildings (for example, a new building for cheese making)</li>
       <li>specialist vehicles (for example, forklifts or refrigerated lorries)</li>
       <li>retail facilities (for example, a farm shop)</li>
     </ul>
-
+<p>Basic storage such as grain or vegetables is not eligible as it does not add value to products.</p>
 <p>The minimum grant you can claim is £35,000 (40% of £87,500). The maximum grant is £500,000.</p>
 <h2 id="when-to-apply">When to apply</h2>
 <table class="govuk-table govuk-body">
@@ -94,7 +94,7 @@
 
 <h3>Submit a full application</h3>
 <p>The RPA will be in touch when the full application period opens. They will tell you if your project scored well enough to get the full application form.</p>
-<P>You should read the <a href="#" class="govuk-link govuk-link--no-visited-state">Farming Transformation Fund Adding Value grant manual</a> before you submit an application.</p>
+<P>You should read the <a href="#" class="govuk-link govuk-link--no-visited-state">Farming Transformation Fund Adding Value grant manual</a> before you submit a full application.</p>
 <p>If you submit an application, RPA will assess it against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.</p>
 <p>If your application is successful, you’ll be sent a funding agreement and can begin work on the project.</p>
 </div>
