--- a/app/views/addingvalue/index.html
+++ b/app/views/addingvalue/index.html
@@ -33,9 +33,9 @@
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Design history</h2>
                             <p class='govuk-list app-list--definition'>
-                              <a href='addingvalue/current/guidance' class="govuk-link--no-visited-state">Version 2 (current)</a><br>
-                              <p class='govuk-list app-list--definition'>This is the version after the first round of iterations, testing with users 4 and 15 November 2021.<br> Includes issues 1 to 16, from <a href='https://eaflood.atlassian.net/wiki/spaces/FG/pages/3630694446/Adding+Value+Design+Content+Changes+Actions' target="new" class="govuk-link--no-visited-state">Confluence</a>.<br>
-                                <span class="govuk-body govuk-!-font-size-14"># Last updated on 4 November 2021<br/>
+                              <a href='addingvalue/current/guidance' class="govuk-link--no-visited-state">Version 2.1 (current)</a><br>
+                              <p class='govuk-list app-list--definition'>This is the version after the second round of iterations, testing with users 4 and 15 November 2021.<br> Includes issues 19 to 30, from <a href='https://eaflood.atlassian.net/wiki/spaces/FG/pages/3630694446/Adding+Value+Design+Content+Changes+Actions' target="new" class="govuk-link--no-visited-state">Confluence</a>.<br>
+                                <span class="govuk-body govuk-!-font-size-14"># Last updated on 11 November 2021<br/>
                                 </span></p>
                                 <p class='govuk-heading-m'>Previous versions</p>
                                 <p class='govuk-list app-list--definition'>
