--- a/app/views/addingvalue/current/where-products-sold.html
+++ b/app/views/addingvalue/current/where-products-sold.html
@@ -33,7 +33,7 @@ Where are the processed products being sold?
                       }
                   },
                   hint: {
-                  text: "Select one option"
+                  html: "How far the majority of the raw materials will travel to get to your <br>project site <br><br>Select one option"
                   },
 
                   items: [
