--- a/app/views/addingvalue/index.html
+++ b/app/views/addingvalue/index.html
@@ -7,7 +7,7 @@
 <!--
 <span class="govuk-caption-xl">Prototypes</span>
 -->
-<title> Slurry prototype admin</title>
+<title> Adding value prototype admin</title>
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
@@ -40,7 +40,7 @@
                                 <p class='govuk-heading-m'>Previous versions</p>
                                 <p class='govuk-list app-list--definition'>
                                   <a href='/addingvalue/v1/guidance' class="govuk-link--no-visited-state">Version 1</a><br>
-                                    This is the baseline desing, which was tested with users between 18 October 2021 and 29 October 2021.</p>
+                                    This is the baseline design, which was tested with users between 18 October 2021 and 29 October 2021.</p>
       </div>
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Journeys and wireframes</h2>
