Project items update

--- a/app/views/addingvalue/current/project-items.html
+++ b/app/views/addingvalue/current/project-items.html
@@ -63,7 +63,7 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="robotic-equipment-8" name="robotic-equipment" type="checkbox" value="Controlled atmosphere (CA) and dynamic controlled atmosphere" {{ checked("robotic-equipment", "Controlled atmosphere (CA) and dynamic controlled atmosphere") }}>
         <label class="govuk-label govuk-checkboxes__label" for="robotic-equipment-8">
-          Controlled atmosphere (CA) or dynamic controlled atmosphere (DCA)
+          Controlled atmosphere (CA) or dynamic controlled atmosphere (DCA) storage
         </label>
         <div id="Controlled-atmosphere-storage-hint" class="govuk-hint govuk-radios__hint">
               For example, CA storage of apples or DCA storage for top fruit
